--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         </nav>
 
         <!-- Main container -->
-        <main class="w-full mt-10 p-5 lg:flex lg:items-center lg:justify-center">
+        <main class="w-full mt-10 p-5 md:flex md:items-center md:justify-center">
 
          <!-- <main class="w-full mt-10 flex items-center justify-center p-5"> -->
 
             <!-- Formation container -->
-             <div class="bg-[url('./src/stadium_background.webp')] bg-cover bg-center p-4 rounded-md shadow-md w-96 sm:w-5/12 md:w-8/12">
+             <div class="bg-[url('./src/stadium_background.webp')] bg-cover bg-center p-4 rounded-md shadow-md  sm:w-5/12 md:w-8/12">
                 <!-- Players -->
                 <div class="flex flex-col items-center h-full w-full">
                     <!-- Forwards -->
@@ -54,7 +54,7 @@
              </div>
 
             <!-- Player Form -->
-            <div class="bg-gray-900 bg-opacity-80 p-6 rounded-lg lg:w-5/12 mx-5 shadow-lg mt-6">
+            <div class="bg-gray-900 bg-opacity-80 p-4 rounded-lg lg:w-5/12 md:w-7/12 mx-auto shadow-lg mt-6 md:ml-5">
                 <h2 class="text-white font-bold text-lg mb-4">Formation</h2>
 
                 <div class="flex gap-2 mb-4">
