easy to read code

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         }
 
         #players-list::-webkit-scrollbar-thumb {
-            background-color: #555; /* Change to your desired color */
+            background-color: #555;
             border-radius: 4px;
         }
 
